--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#0052FF" />
     <meta name="base:app_id" content="6957beeb4d3a403912ed8a22" />
-    <meta name="description" content="BaseBird - Addictive game with on-chain leaderboard on Base network" />
+    <meta name="description" content="BaseBird - Addictive game with onchain leaderboard on Base" />
     
     <!-- Prevent zoom on mobile for better game experience -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
