fix: correct URL to base-bird.vercel.app

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="BaseBird - Flappy Game on Base" />
     <meta property="og:description" content="Can you beat my score? Play BaseBird!" />
-    <meta property="og:image" content="https://basebird.vercel.app/assets/bird.png" />
-    <meta property="og:url" content="https://basebird.vercel.app" />
+    <meta property="og:image" content="https://base-bird.vercel.app/assets/bird.png" />
+    <meta property="og:url" content="https://base-bird.vercel.app" />
     
     <style>
       /* Prevent pull-to-refresh on mobile */
